k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clearcut-backend-deployment
  namespace: clearcut
  labels:
    app: clearcut-backend
spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: clearcut-backend
  template:
    metadata:
      labels:
        app: clearcut-backend
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: clearcut-backend-container 
          image: debjyoti08/clearcut_server:v1.0.5st
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 10
