k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clearcut-service
  namespace: clearcut
spec:
  type: NodePort
  selector:
    app: clearcut-backend
  ports:
  - port: 4000
    targetPort: 4000
    protocol: TCP
    nodePort: 32000
