k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clearcut-frontend-service
  namespace: clearcut
  labels:
    app: clearcut-frontend
spec:
  type: NodePort
  selector:
    app: clearcut-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 30080
